Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-36116

TOI crashes in debug assert if executing thread is killed

    XMLWordPrintable

Details

    Description

      mariadbd: /home/denis/dev/mariadb-server-features/sql/wsrep_mysqld.cc:2631: int wsrep_to_isolation_begin(THD*, const char*, const char*, const TABLE_LIST*, const Alter_info*, const key_array*
      , const HA_CREATE_INFO*): Assertion `(0)' failed.
      

      should not be triggered. A thread may be killed under memory pressure conditions, so it's not a failure.

      Attachments

        Activity

          People

            sysprg Julius Goryavsky (Inactive)
            denis.protivensky Denis Protivensky
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Git Integration

                Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.