MDEV-36116: Remove debug assert in TOI when executing thread is killed

Signed-off-by: Julius Goryavsky <julius.goryavsky@mariadb.com>